# sql2ai

./: .eslintrc.json  .gitignore  CLAUDE.md  nx.json  package-lock.json  package.json  render.yaml  tsconfig.base.json
.claude/: CLAUDE.md
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  project.json  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20241225_0000_001_initial_schema.py  20241225_0001_002_rls_policies.py
apps/api/scripts/: seed.py  seed_sample_db.sql  seed_sample_db_postgres.sql  start.sh
apps/api/src/: config.py  main.py
apps/api/src/routers/: __init__.py  connections.py  migrations.py  queries.py  schemas.py  telemetry.py
apps/api/src/sql2ai_api/: config.py  main.py
apps/api/src/sql2ai_api/db/: __init__.py  base.py  session.py
apps/api/src/sql2ai_api/dependencies/: __init__.py  auth.py
apps/api/src/sql2ai_api/middleware/: __init__.py  auth.py
apps/api/src/sql2ai_api/models/: __init__.py  audit.py  connection.py  query.py  tenant.py  user.py
apps/api/src/sql2ai_api/routers/: __init__.py  billing.py  codereview.py  compliance.py  connections.py  dashboard.py  migrator.py  optimize.py  orchestrator.py  queries.py  schemas.py  version.py  writer.py
apps/api/src/sql2ai_api/routers/webhooks/: __init__.py  clerk.py
apps/api/src/sql2ai_api/security/: __init__.py  encryption.py
apps/api/src/sql2ai_api/services/: __init__.py  connections.py  dashboard.py  schema.py
apps/api/tests/: __init__.py  conftest.py  test_auth.py  test_encryption.py  test_schema.py
apps/app/: .env.example  next.config.js  package.json  sentry.client.config.ts  sentry.edge.config.ts  tailwind.config.ts
apps/app/src/: middleware.ts
apps/cli/: README.md  pyproject.toml
apps/cli/src/sql2ai_cli/: __init__.py  main.py
apps/cli/src/sql2ai_cli/commands/: __init__.py  auth.py  connections.py  generate.py  migrate.py  optimize.py  review.py  schema.py
apps/cli/src/sql2ai_cli/utils/: __init__.py  api.py  config.py
apps/site/: .env.example  next.config.js  project.json  sentry.client.config.ts  tailwind.config.js  tsconfig.json  vercel.json
apps/site/e2e/: accessibility.spec.ts  consulting.spec.ts  features.spec.ts  home.spec.ts  navigation.spec.ts  pricing.spec.ts
apps/site/scripts/: build.sh
apps/ssms-addin/: README.md  SQL2AI.SSMS.sln
apps/vscode-extension/: README.md  package.json  tsconfig.json
apps/web/: next.config.js  project.json  tailwind.config.js
docs/: DESIGN_SPECIFICATION.md  DESIGN_STRATEGY_DRAFT.md  DESIGN_STRATEGY_REVISED.md  IMAGE_GENERATION_QUEUE.md  IMAGE_GENERATION_README.md  IMPLEMENTATION-PLAN.md  SECURITY-ARCHITECTURE.md  SETUP.md  SITE_PLAN.md  TOOL_RECOMMENDATIONS.md  VISION.md
docs/architecture/: ARCHITECTURE-DECISIONS.md  ENTERPRISE-ARCHITECTURE.md  PLATFORM-ARCHITECTURE.md  TOOLSET-INTEGRATIONS.md
docs/content/: ARTICLE-PLAN.md
docs/modules/: 01-ORCHESTRATOR.md  02-MIGRATOR.md  03-VERSION.md  04-CODE.md  05-WRITER.md  06-SSMS-PLUGIN.md  07-OPTIMIZE.md  08-COMPLY.md  09-CONVERT.md  10-STANDARDIZE.md  11-CENTRALIZE.md  12-ANONYMIZE.md  13-SIMULATE.md  14-TEST.md  15-API.md  16-AUDIT.md  17-SEND.md  18-RECEIVE.md  19-CONTAINERIZE.md  20-TENANT.md  21-ENCRYPT.md  22-CONVERSE.md  23-AGENT.md  24-MONITOR.md  25-IMPORT.md  26-COMPARE.md  27-CLI.md
infrastructure/docker/: .env.example  README.md  docker-compose.yml
libs/llm-orchestrator/: project.json
libs/migration-engine/: project.json  tsconfig.lib.json
libs/query-optimizer/: project.json  tsconfig.lib.json
libs/schema-analyzer/: project.json
libs/schema-engine/: pyproject.toml
libs/schema-engine/src/: __init__.py  analyzer.py  differ.py  extractors.py  models.py
libs/shared/: README.md  pyproject.toml
libs/shared-types/: project.json
libs/shared/sql2ai_shared/: __init__.py  constants.py
libs/shared/sql2ai_shared/ai/: __init__.py  agents.py  models.py  providers.py
libs/shared/sql2ai_shared/audit/: __init__.py  decorators.py  logger.py  models.py
libs/shared/sql2ai_shared/auth/: __init__.py  jwt.py  models.py
libs/shared/sql2ai_shared/caching/: __init__.py  decorators.py  redis.py
libs/shared/sql2ai_shared/database/: __init__.py  connection.py  pool.py
libs/shared/sql2ai_shared/events/: __init__.py  bus.py  types.py
libs/shared/sql2ai_shared/integrations/: __init__.py  ai.py  clerk.py  posthog.py  resend.py  sentry.py  stripe.py
libs/shared/sql2ai_shared/prompts/: __init__.py  base.py  executor.py  harness.py  templates.py
libs/shared/sql2ai_shared/resilience/: __init__.py  bulkhead.py  circuit_breaker.py  retry.py
libs/shared/sql2ai_shared/telemetry/: __init__.py  logging.py  metrics.py  tracing.py
libs/shared/sql2ai_shared/tenancy/: __init__.py  context.py  limits.py
libs/sql-code-review/: pyproject.toml
libs/sql-code-review/src/: __init__.py  analyzer.py  data_dictionary.py  models.py  release_notes.py
libs/sql-code-review/tests/: __init__.py  test_code_review.py
libs/sql-compliance/: pyproject.toml
libs/sql-compliance/src/: __init__.py  compliance.py  models.py  scanner.py
libs/sql-compliance/tests/: __init__.py  test_compliance.py
libs/sql-migrator/: pyproject.toml
libs/sql-optimize/: pyproject.toml
libs/sql-optimize/src/: __init__.py  analyzers.py  models.py  optimizer.py
libs/sql-optimize/tests/: __init__.py  test_optimize.py
libs/sql-orchestrator/: pyproject.toml
libs/sql-orchestrator/src/: __init__.py  checks.py  models.py  orchestrator.py  triggers.py
libs/sql-orchestrator/tests/: __init__.py  test_checks.py
libs/sql-parser/: project.json
libs/sql-parser/src/: ast.ts  (+4 more)
libs/sql-version/: pyproject.toml
libs/sql-version/src/: __init__.py  models.py  repository.py  version_control.py
libs/sql-version/tests/: __init__.py  test_version.py
libs/sql-writer/: pyproject.toml
libs/sql-writer/src/: __init__.py  generators.py  models.py  writer.py
libs/sql-writer/tests/: __init__.py  test_writer.py
libs/telemetry-collector/: project.json
libs/ui-components/: project.json  tsconfig.lib.json
tools/: generate-images.sh
(+206 files in other folders)
