[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql2ai-api"
version = "0.1.0"
description = "SQL2.AI API Service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chris Therriault", email = "chris@servicevision.net" }
]

dependencies = [
    # Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Shared library (installed separately in Docker)
    # "sql2ai-shared",

    # Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",

    # AI
    "litellm>=1.20.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",

    # Integrations
    "stripe>=7.0.0",
    "resend>=0.7.0",
    "posthog>=3.0.0",
    "clerk-backend-api>=0.1.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # HTTP
    "httpx>=0.26.0",

    # Observability
    "sentry-sdk[fastapi]>=1.39.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
