[project]
name = "schema-engine"
version = "0.1.0"
description = "SQL2.AI Schema Extraction and Analysis Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "structlog>=23.1.0",
    "pyodbc>=5.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
