[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-code-review"
version = "0.1.0"
description = "Automated SQL code review, release notes, and data dictionary generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "sqlparse>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
