[project]
name = "sql-compliance"
version = "0.1.0"
description = "Automated compliance checking with PII/PHI detection for SQL databases"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
