[project]
name = "sql-optimize"
version = "0.1.0"
description = "Deep performance analysis with AI-driven remediation for SQL databases"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
