[project]
name = "sql-orchestrator"
version = "0.1.0"
description = "Unified monitoring, security auditing, and compliance checking for SQL databases"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "aioodbc>=0.5.0",
    "asyncpg>=0.29.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
