[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-version"
version = "0.1.0"
description = "Git-like version control for database objects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
git = [
    "gitpython>=3.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
