[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-writer"
version = "0.1.0"
description = "AI-powered DDL and programmable object generation for SQL Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
